# aso-dir

./: pyproject.toml
VD_games/: calc.py  cli.py  engine.py  gcd.py  prime.py
VD_games/scripts/: VD_calc.py  VD_even.py  VD_games.py  VD_gcd.py  VD_main.py  VD_prime.py  VD_progression.py
