[project]
name = "games-project-para"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "prompt>=0.4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["VD_games"]

[tool.uv.workspace]
members = [
    "games_project_Paramonov",
]

[project.scripts]
VD-games = "VD_games.scripts.VD_main:main"
VD-even = "VD_games.scripts.VD_even:main"
VD-gcd = "VD_games.scripts.VD_gcd:main"
VD-calc = "VD_games.scripts.VD_calc:main"
VD-progression = "VD_games.scripts.VD_progression:main"
VD-prime = "VD_games.scripts.VD_prime:main"
